--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rmw-shell",
-  "version": "1.1.0-0",
+  "version": "1.1.0",
   "description": "rmw-shell React component",
   "main": "lib/index.js",
   "module": "es/index.js",
