--- a/package.json
+++ b/package.json
@@ -81,8 +81,8 @@
     "material-ui-responsive-drawer": "^1.19.2",
     "material-ui-responsive-menu": "^1.19.2",
     "material-ui-selectable-menu-list": "^1.19.3",
-    "material-ui-superselectfield": "^1.7.0",
-    "nwb": "0.19.x",
+    "material-ui-superselectfield": "^1.7.2",
+    "nwb": "^0.20.0",
     "prop-types": "^15.6.0",
     "react": "^16.1.1",
     "react-chartjs-2": "^2.6.4",
@@ -96,17 +96,17 @@
     "react-intl": "^2.4.0",
     "react-list": "^0.8.8",
     "react-loadable": "^5.3.1",
-    "react-markdown": "^2.5.1",
+    "react-markdown": "^3.0.0",
     "react-materialui-notifications": "^0.5.1",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-form": "^7.1.2",
-    "redux-form-material-ui": "^4.3.0",
+    "redux-form-material-ui": "^4.3.1",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.4.0",
-    "redux-responsive": "^4.3.4",
+    "redux-responsive": "^4.3.5",
     "redux-testkit": "^1.0.6",
     "redux-thunk": "^2.2.0",
     "source-map-explorer": "^1.5.0",
