--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "react-loadable": "^5.3.1",
     "react-markdown": "^3.1.1",
     "react-materialui-notifications": "^0.5.1",
+    "react-mic": "^9.0.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
