--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-loadable": "5.x",
     "react-materialui-notifications": "0.x",
     "react-mic": "9.x",
+    "react-player": "0.x",
     "react-redux": "5.x",
     "react-router": "4.x",
     "react-router-dom": "4.x",
@@ -92,6 +93,7 @@
     "react-markdown": "^3.1.4",
     "react-materialui-notifications": "^0.5.1",
     "react-mic": "^9.0.0",
+    "react-player": "^0.25.3",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
