--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "react-intl": "2.x",
     "react-list": "0.x",
     "react-loadable": "5.x",
-    "react-materialui-notifications": "0.x",
     "react-mic": "9.x",
     "react-player": "1.x",
     "react-redux": "5.x",
@@ -56,12 +55,13 @@
     "redux-logger": "3.x",
     "redux-persist": "5.x",
     "redux-responsive": "4.x",
-    "redux-thunk": "2.x"
+    "redux-thunk": "2.x",
+    "react-toastify": "3.x"
   },
   "devDependencies": {
     "chart.js": "^2.7.1",
     "enzyme": "^3.3.0",
-    "firebase": "^4.10.0",
+    "firebase": "^4.10.1",
     "firebaseui": "^2.6.1",
     "fireform": "^0.2.13",
     "firekit": "^1.0.1",
@@ -90,18 +90,18 @@
     "react-intl": "^2.4.0",
     "react-list": "^0.8.8",
     "react-loadable": "^5.3.1",
-    "react-markdown": "^3.2.0",
-    "react-materialui-notifications": "^0.5.1",
+    "react-markdown": "^3.2.1",
     "react-mic": "^9.0.0",
-    "react-player": "^1.1.2",
+    "react-player": "^1.2.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-toastify": "^3.3.4",
     "redux": "^3.7.2",
     "redux-form": "^7.2.3",
     "redux-form-material-ui": "^4.3.3",
     "redux-logger": "^3.0.6",
-    "redux-persist": "^5.9.0",
+    "redux-persist": "^5.9.1",
     "redux-responsive": "^4.3.5",
     "redux-testkit": "^1.0.6",
     "redux-thunk": "^2.2.0",
