--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-toastify": "3.x"
   },
   "devDependencies": {
+    "@material-ui/icons": "^1.0.0-beta.43",
     "chart.js": "^2.7.2",
     "enzyme": "^3.3.0",
     "firebase": "^4.13.1",
