--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     "react-toastify": "^3.4.3",
     "redux": "^4.0.0",
     "redux-form": "^7.3.0",
-    "redux-form-material-ui": "^4.3.4",
+    "redux-form-material-ui": "^5.0.0-beta.2",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.9.1",
     "redux-responsive": "^4.3.6",
