--- a/package.json
+++ b/package.json
@@ -65,14 +65,15 @@
     "firebase": "^4.13.1",
     "firebaseui": "^2.7.0",
     "fireform": "^0.2.13",
-    "firekit": "^1.0.8",
-    "firekit-provider": "^0.2.16",
+    "firekit": "^1.0.10",
+    "firekit-provider": "^0.2.19",
     "github-markdown-css": "^2.10.0",
     "intl": "^1.2.5",
     "intl-locales-supported": "^1.0.0",
-    "material-ui": "^1.0.0-beta.43",
-    "material-ui-filter": "^0.1.38",
+    "material-ui": "^1.0.0-beta.44",
+    "material-ui-filter": "^1.0.0-beta.10",
     "material-ui-image": "^2.1.1",
+    "material-ui-pickers": "^1.0.0-rc.7",
     "material-ui-responsive-drawer": "^1.19.4",
     "material-ui-responsive-menu": "^1.19.3",
     "material-ui-selectable-menu-list": "^1.19.5",
@@ -80,7 +81,7 @@
     "nwb": "^0.21.5",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
-    "react-chartjs-2": "^2.7.0",
+    "react-chartjs-2": "^2.7.2",
     "react-container-dimensions": "^1.3.3",
     "react-countup": "^3.0.3",
     "react-custom-scrollbars": "^4.2.1",
@@ -93,17 +94,18 @@
     "react-loadable": "^5.3.1",
     "react-markdown": "^3.3.0",
     "react-mic": "^9.1.2",
-    "react-player": "^1.4.0",
+    "react-player": "^1.5.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-select": "^1.2.1",
     "react-toastify": "^3.4.3",
     "redux": "^4.0.0",
     "redux-form": "^7.3.0",
     "redux-form-material-ui": "^5.0.0-beta.2",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.9.1",
-    "redux-responsive": "^4.3.6",
+    "redux-responsive": "^4.3.7",
     "redux-testkit": "^1.0.6",
     "redux-thunk": "^2.2.0",
     "source-map-explorer": "^1.5.0",
