--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rmw-shell",
-  "version": "1.6.7",
+  "version": "2.0.0-beta.1",
   "description": "rmw-shell React component",
   "main": "lib/index.js",
   "module": "es/index.js",
