--- a/package.json
+++ b/package.json
@@ -66,13 +66,13 @@
     "firebaseui": "^2.7.0",
     "fireform": "^0.2.13",
     "firekit": "^1.0.10",
-    "firekit-provider": "^0.2.19",
+    "firekit-provider": "^0.2.20",
     "github-markdown-css": "^2.10.0",
     "intl": "^1.2.5",
     "intl-locales-supported": "^1.0.0",
-    "material-ui": "^1.0.0-beta.44",
+    "material-ui": "^1.0.0-beta.47",
     "material-ui-filter": "^1.0.0-beta.10",
-    "material-ui-image": "^2.1.1",
+    "material-ui-image": "^3.0.0-pre.7",
     "material-ui-pickers": "^1.0.0-rc.7",
     "material-ui-responsive-drawer": "^1.19.4",
     "material-ui-responsive-menu": "^1.19.3",
@@ -92,8 +92,8 @@
     "react-intl": "^2.4.0",
     "react-list": "^0.8.8",
     "react-loadable": "^5.4.0",
-    "react-markdown": "^3.3.0",
-    "react-mic": "^9.1.2",
+    "react-markdown": "^3.3.2",
+    "react-mic": "^9.2.0",
     "react-player": "^1.5.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
