--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "react-toastify": "3.x"
   },
   "devDependencies": {
-    "@material-ui/icons": "^1.0.0-beta.43",
+    "@material-ui/core": "^1.0.0",
+    "@material-ui/icons": "^1.0.0",
     "chart.js": "^2.7.2",
     "enzyme": "^3.3.0",
     "firebase": "^5.0.3",
@@ -71,7 +72,7 @@
     "intl": "^1.2.5",
     "intl-locales-supported": "^1.0.0",
     "material-ui": "^1.0.0-beta.47",
-    "material-ui-filter": "^1.0.0-beta.10",
+    "material-ui-filter": "^2.0.1",
     "material-ui-image": "^3.0.0-pre.7",
     "material-ui-pickers": "^1.0.0-rc.7",
     "material-ui-responsive-drawer": "^1.19.4",
@@ -94,7 +95,7 @@
     "react-loadable": "^5.4.0",
     "react-markdown": "^3.3.2",
     "react-mic": "^9.2.0",
-    "react-player": "^1.6.0",
+    "react-player": "^1.6.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
