--- a/package.json
+++ b/package.json
@@ -19,45 +19,7 @@
     "test:watch": "nwb test-react --server"
   },
   "dependencies": {},
-  "peerDependencies": {
-    "firebase": "4.x",
-    "firebaseui": "2.x",
-    "fireform": "0.x",
-    "firekit": "0.x",
-    "firekit-provider": "0.x",
-    "intl": "1.x",
-    "intl-locales-supported": "1.x",
-    "material-ui": "0.x",
-    "material-ui-filter": "0.x",
-    "material-ui-image": "2.x",
-    "material-ui-responsive-drawer": "1.x",
-    "material-ui-responsive-menu": "1.x",
-    "material-ui-selectable-menu-list": "1.x",
-    "material-ui-superselectfield": "1.x",
-    "prop-types": "15.x",
-    "react": "15.x || 16.x",
-    "react-container-dimensions": "1.x",
-    "react-custom-scrollbars": "4.x",
-    "react-dom": "15.x || 16.x",
-    "react-helmet": "5.x",
-    "react-image-cropper": "1.x",
-    "react-intl": "2.x",
-    "react-list": "0.x",
-    "react-loadable": "5.x",
-    "react-mic": "9.x",
-    "react-player": "1.x",
-    "react-redux": "5.x",
-    "react-router": "4.x",
-    "react-router-dom": "4.x",
-    "redux": "3.x",
-    "redux-form": "7.x",
-    "redux-form-material-ui": "4.x",
-    "redux-logger": "3.x",
-    "redux-persist": "5.x",
-    "redux-responsive": "4.x",
-    "redux-thunk": "2.x",
-    "react-toastify": "3.x"
-  },
+  "peerDependencies": {},
   "devDependencies": {
     "@material-ui/core": "^1.0.0",
     "@material-ui/icons": "^1.0.0",
@@ -75,10 +37,6 @@
     "material-ui-filter": "^2.0.1",
     "material-ui-image": "^3.0.0-pre.7",
     "material-ui-pickers": "^1.0.0-rc.7",
-    "material-ui-responsive-drawer": "^1.19.4",
-    "material-ui-responsive-menu": "^1.19.3",
-    "material-ui-selectable-menu-list": "^1.19.5",
-    "material-ui-superselectfield": "^1.9.2",
     "nwb": "^0.21.5",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
