--- a/package.json
+++ b/package.json
@@ -24,16 +24,16 @@
     "match-sorter": "^2.2.3"
   },
   "devDependencies": {
-    "@material-ui/core": "^1.2.1",
+    "@material-ui/core": "^1.2.3",
     "@material-ui/icons": "^1.1.0",
     "a2hs": "^1.0.2",
     "chart.js": "^2.7.2",
-    "downshift": "^1.31.15",
+    "downshift": "^2.0.10",
     "enzyme": "^3.3.0",
     "firebase": "^5.0.4",
-    "firebaseui": "^3.0.0",
+    "firebaseui": "^3.1.0",
     "fireform": "^0.2.13",
-    "firekit": "^1.0.16",
+    "firekit": "^1.0.17",
     "firekit-provider": "^0.2.20",
     "github-markdown-css": "^2.10.0",
     "intl": "^1.2.5",
@@ -43,18 +43,19 @@
     "material-ui-filter": "^2.0.1",
     "material-ui-image": "^3.0.0-pre.7",
     "material-ui-pickers": "^1.0.0-rc.7",
+    "mui-downshift": "^1.0.0-15",
     "nwb": "^0.22.0",
-    "prop-types": "^15.6.1",
-    "react": "^16.4.0",
+    "prop-types": "^15.6.2",
+    "react": "^16.4.1",
     "react-chartjs-2": "^2.7.2",
     "react-countup": "^3.0.3",
     "react-custom-scrollbars": "^4.2.1",
-    "react-dom": "^16.4.0",
+    "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
     "react-image-cropper": "^1.3.0",
     "react-infinite": "^0.13.0",
     "react-intl": "^2.4.0",
-    "react-list": "^0.8.9",
+    "react-list": "^0.8.10",
     "react-loadable": "^5.4.0",
     "react-mic": "^9.2.0",
     "react-player": "^1.6.4",
@@ -64,7 +65,7 @@
     "react-select": "^1.2.1",
     "react-toastify": "^4.1.0",
     "redux": "^4.0.0",
-    "redux-form": "^7.3.0",
+    "redux-form": "^7.4.2",
     "redux-form-material-ui": "^5.0.0-beta.2",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
