--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
     "match-sorter": "^2.2.3"
   },
   "devDependencies": {
-    "@material-ui/core": "^1.2.3",
+    "@material-ui/core": "^1.3.0",
     "@material-ui/icons": "^1.1.0",
     "a2hs": "^1.0.2",
     "chart.js": "^2.7.2",
     "downshift": "^2.0.10",
     "enzyme": "^3.3.0",
     "firebase": "^5.0.4",
-    "firebaseui": "^3.1.0",
+    "firebaseui": "^3.1.1",
     "fireform": "^0.2.13",
     "firekit": "^1.0.17",
     "firekit-provider": "^0.2.20",
@@ -43,7 +43,7 @@
     "material-ui-filter": "^2.0.1",
     "material-ui-image": "^3.0.0-pre.7",
     "material-ui-pickers": "^1.0.0-rc.7",
-    "mui-downshift": "^1.0.0-15",
+    "muishift": "^0.1.2",
     "nwb": "^0.22.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
@@ -64,6 +64,7 @@
     "react-router-dom": "^4.3.1",
     "react-select": "^1.2.1",
     "react-toastify": "^4.1.0",
+    "react-virtualized": "^9.20.0",
     "redux": "^4.0.0",
     "redux-form": "^7.4.2",
     "redux-form-material-ui": "^5.0.0-beta.2",
