--- a/package.json
+++ b/package.json
@@ -20,8 +20,45 @@
   },
   "dependencies": {},
   "peerDependencies": {
-    "downshift": "^1.31.15",
-    "match-sorter": "^2.2.3"
+    "@material-ui/core": "1.3.0",
+    "@material-ui/icons": "1.1.0",
+    "a2hs": "1.0.2",
+    "downshift": "2.0.10",
+    "firebase": "5.0.4",
+    "firebaseui": "3.1.1",
+    "fireform": "0.2.13",
+    "firekit": "1.0.17",
+    "firekit-provider": "0.2.20",
+    "intl": "1.2.5",
+    "intl-locales-supported": "1.0.0",
+    "match-sorter": "2.2.3",
+    "material-ui": "1.0.0-beta.47",
+    "material-ui-filter": "2.1.1",
+    "material-ui-image": "3.0.0-pre.7",
+    "material-ui-pickers": "1.0.0-rc.7",
+    "muishift": "0.1.8",
+    "prop-types": "15.6.2",
+    "react": "16.4.1",
+    "react-custom-scrollbars": "4.2.1",
+    "react-dom": "16.4.1",
+    "react-helmet": "5.2.0",
+    "react-image-cropper": "1.3.0",
+    "react-intl": "2.4.0",
+    "react-list": "0.8.10",
+    "react-loadable": "5.4.0",
+    "react-mic": "9.2.0",
+    "react-player": "1.6.4",
+    "react-redux": "5.0.7",
+    "react-router": "4.3.1",
+    "react-router-dom": "4.3.1",
+    "react-toastify": "4.1.0",
+    "react-virtualized": "9.20.0",
+    "redux": "4.0.0",
+    "redux-form": "7.4.2",
+    "redux-form-material-ui": "5.0.0-beta.2",
+    "redux-logger": "3.0.6",
+    "redux-persist": "5.10.0",
+    "redux-thunk": "2.3.0"
   },
   "devDependencies": {
     "@material-ui/core": "^1.3.0",
@@ -40,10 +77,10 @@
     "intl-locales-supported": "^1.0.0",
     "match-sorter": "^2.2.3",
     "material-ui": "^1.0.0-beta.47",
-    "material-ui-filter": "^2.0.1",
+    "material-ui-filter": "^2.1.1",
     "material-ui-image": "^3.0.0-pre.7",
     "material-ui-pickers": "^1.0.0-rc.7",
-    "muishift": "^0.1.2",
+    "muishift": "^0.1.8",
     "nwb": "^0.22.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
@@ -53,7 +90,6 @@
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
     "react-image-cropper": "^1.3.0",
-    "react-infinite": "^0.13.0",
     "react-intl": "^2.4.0",
     "react-list": "^0.8.10",
     "react-loadable": "^5.4.0",
@@ -62,7 +98,6 @@
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-select": "^1.2.1",
     "react-toastify": "^4.1.0",
     "react-virtualized": "^9.20.0",
     "redux": "^4.0.0",
