--- a/package.json
+++ b/package.json
@@ -66,6 +66,11 @@
     "chart.js": "^2.7.2",
     "downshift": "^2.2.2",
     "enzyme": "^3.6.0",
+    "eslint": "^5.6.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
     "firebase": "^5.5.1",
     "firebaseui": "^3.4.1",
     "fireform": "^0.2.13",
