Fixed bug in EditActivity

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,11 @@
     "quotes": ["error", "single"],
     "semi": ["error", "never"],
     "react/prop-types": [1],
-    "no-console": "warn"
+    "no-console": "warn",
+    "parserOptions": {
+      "ecmaFeatures": {
+        "jsx": true
+      }
+    }
   }
 }
