--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@material-ui/core": "^3.1.1",
     "@material-ui/icons": "^3.0.1",
     "a2hs": "^1.0.2",
+    "babel-eslint": "^9.0.0",
     "chart.js": "^2.7.2",
     "downshift": "^2.2.2",
     "enzyme": "^3.6.0",
