--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "redux-thunk": "2.x"
   },
   "devDependencies": {
-    "@material-ui/core": "^3.1.1",
+    "@material-ui/core": "^3.2.0",
     "@material-ui/icons": "^3.0.1",
     "a2hs": "^1.0.2",
     "babel-eslint": "^10.0.1",
@@ -70,7 +70,7 @@
     "eslint": "^5.6.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
     "firebase": "^5.5.3",
     "firebaseui": "^3.4.1",
@@ -82,7 +82,7 @@
     "intl-locales-supported": "^1.0.0",
     "match-sorter": "^2.3.0",
     "material-ui-filter": "^2.1.2",
-    "material-ui-image": "^3.0.0-pre.7",
+    "material-ui-image": "^3.0.1",
     "material-ui-pickers": "^1.0.0-rc.7",
     "muishift": "^1.0.8",
     "nwb": "^0.23.0",
@@ -94,7 +94,7 @@
     "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
     "react-image-cropper": "^1.3.0",
-    "react-intl": "^2.7.0",
+    "react-intl": "^2.7.1",
     "react-list": "^0.8.10",
     "react-loadable": "^5.5.0",
     "react-mic": "^12.2.2",
