--- a/package.json
+++ b/package.json
@@ -60,19 +60,19 @@
     "redux-thunk": "2.x"
   },
   "devDependencies": {
-    "@material-ui/core": "^3.3.1",
+    "@material-ui/core": "^3.3.2",
     "@material-ui/icons": "^3.0.1",
     "a2hs": "^1.0.2",
     "babel-eslint": "^10.0.1",
     "chart.js": "^2.7.3",
     "downshift": "^3.1.4",
     "enzyme": "^3.7.0",
-    "eslint": "^5.7.0",
+    "eslint": "^5.8.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
-    "firebase": "^5.5.5",
+    "firebase": "^5.5.6",
     "firebaseui": "^3.4.1",
     "fireform": "^0.2.13",
     "firekit": "^1.0.27",
@@ -83,13 +83,13 @@
     "match-sorter": "^2.3.0",
     "material-ui-filter": "^2.1.8",
     "material-ui-image": "^3.0.1",
-    "material-ui-pickers": "^1.0.0-rc.7",
+    "material-ui-pickers": "^1.0.1",
     "muishift": "^1.0.8",
     "nwb": "^0.23.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-chartjs-2": "^2.7.4",
-    "react-countup": "^3.0.3",
+    "react-countup": "^4.0.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.6.0",
     "react-helmet": "^5.2.0",
@@ -99,7 +99,7 @@
     "react-loadable": "^5.5.0",
     "react-mic": "^12.2.3",
     "react-player": "^1.6.6",
-    "react-redux": "^5.0.7",
+    "react-redux": "^5.1.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-toastify": "^4.4.0",
