--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {},
   "peerDependencies": {
+    "@date-io/moment": "0.x",
     "@material-ui/core": "1.x",
     "@material-ui/icons": "1.x",
     "a2hs": "1.x",
@@ -34,7 +35,7 @@
     "match-sorter": "2.x",
     "material-ui-filter": "2.x",
     "material-ui-image": "3.0.0-pre.7",
-    "material-ui-pickers": "1.0.0-rc.14",
+    "material-ui-pickers": "2.x",
     "muishift": "1.x",
     "prop-types": "15.x",
     "react": "16.x",
@@ -60,7 +61,8 @@
     "redux-thunk": "2.x"
   },
   "devDependencies": {
-    "@material-ui/core": "^3.3.2",
+    "@date-io/moment": "0.0.1",
+    "@material-ui/core": "^3.4.0",
     "@material-ui/icons": "^3.0.1",
     "a2hs": "^1.0.2",
     "babel-eslint": "^10.0.1",
@@ -72,7 +74,7 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
-    "firebase": "^5.5.6",
+    "firebase": "^5.5.7",
     "firebaseui": "^3.4.1",
     "fireform": "^0.2.13",
     "firekit": "^1.0.27",
@@ -82,16 +84,16 @@
     "intl-locales-supported": "^1.0.0",
     "match-sorter": "^2.3.0",
     "material-ui-filter": "^2.1.8",
-    "material-ui-image": "^3.0.1",
-    "material-ui-pickers": "^1.0.1",
-    "muishift": "^1.0.8",
+    "material-ui-image": "^3.0.3",
+    "material-ui-pickers": "^2.0.0",
+    "muishift": "^1.0.12",
     "nwb": "^0.23.0",
     "prop-types": "^15.6.2",
-    "react": "^16.6.0",
+    "react": "^16.6.1",
     "react-chartjs-2": "^2.7.4",
     "react-countup": "^4.0.0",
     "react-custom-scrollbars": "^4.2.1",
-    "react-dom": "^16.6.0",
+    "react-dom": "^16.6.1",
     "react-helmet": "^5.2.0",
     "react-image-cropper": "^1.3.0",
     "react-intl": "^2.7.2",
