Migration to react-redux 6.0.0

--- a/package.json
+++ b/package.json
@@ -18,7 +18,14 @@
     "test:coverage": "nwb test-react --coverage",
     "test:watch": "nwb test-react --server"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@material-ui/lab": "^3.0.0-alpha.25",
+    "classnames": "^2.2.6",
+    "expect": "^23.6.0",
+    "firekit-provider": "^1.0.1",
+    "history": "^4.7.2",
+    "moment": "^2.22.2"
+  },
   "peerDependencies": {
     "@date-io/moment": "0.x",
     "@material-ui/core": "1.x",
@@ -48,13 +55,13 @@
     "react-loadable": "5.x",
     "react-mic": "9.x",
     "react-player": "1.x",
-    "react-redux": "5.x",
+    "react-redux": "6.x",
     "react-router": "4.x",
     "react-router-dom": "4.x",
     "react-toastify": "4.x",
     "react-virtualized": "9.x",
     "redux": "4.x",
-    "redux-form": "7.x",
+    "redux-form": "8.x",
     "redux-form-material-ui": "5.0.0-beta.2",
     "redux-logger": "3.x",
     "redux-persist": "5.x",
@@ -67,10 +74,8 @@
     "a2hs": "^1.0.2",
     "babel-eslint": "^10.0.1",
     "chart.js": "^2.7.3",
-    "downshift": "^3.1.5",
-    "enzyme": "^3.8.0",
+    "downshift": "^3.1.6",
     "eslint": "^5.10.0",
-    "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
@@ -78,8 +83,6 @@
     "firebaseui": "^3.4.1",
     "fireform": "^0.2.13",
     "firekit": "^1.0.27",
-    "firekit-provider": "^0.2.20",
-    "github-markdown-css": "^2.10.0",
     "intl": "^1.2.5",
     "intl-locales-supported": "^1.0.0",
     "match-sorter": "^2.3.0",
@@ -101,19 +104,17 @@
     "react-loadable": "^5.5.0",
     "react-mic": "^12.3.0",
     "react-player": "^1.7.0",
-    "react-redux": "^5.1.1",
+    "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-toastify": "^4.4.3",
     "react-virtualized": "^9.21.0",
     "redux": "^4.0.1",
-    "redux-form": "^7.4.2",
+    "redux-form": "^8.0.1",
     "redux-form-material-ui": "^5.0.0-beta.2",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
-    "redux-thunk": "^2.3.0",
-    "source-map-explorer": "^1.6.0",
-    "standard": "^12.0.1"
+    "redux-thunk": "^2.3.0"
   },
   "author": "Tarik Huber",
   "homepage": "https://www.react-most-wanted.com/",
