--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "expect": "^23.6.0",
     "firekit-provider": "^1.0.1",
     "history": "^4.7.2",
-    "moment": "^2.22.2"
+    "moment": "^2.23.0"
   },
   "peerDependencies": {
     "@date-io/moment": "0.x",
@@ -68,49 +68,49 @@
     "redux-thunk": "2.x"
   },
   "devDependencies": {
-    "@date-io/moment": "0.0.2",
-    "@material-ui/core": "^3.6.2",
-    "@material-ui/icons": "^3.0.1",
+    "@date-io/moment": "^1.0.1",
+    "@material-ui/core": "^3.8.3",
+    "@material-ui/icons": "^3.0.2",
     "a2hs": "^1.0.2",
     "babel-eslint": "^10.0.1",
     "chart.js": "^2.7.3",
-    "downshift": "^3.1.6",
-    "eslint": "^5.10.0",
+    "downshift": "^3.1.12",
+    "eslint": "^5.12.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1",
-    "firebase": "^5.7.0",
-    "firebaseui": "^3.4.1",
+    "eslint-plugin-react": "^7.12.3",
+    "firebase": "^5.7.2",
+    "firebaseui": "^3.5.1",
     "fireform": "^0.2.13",
     "firekit": "^1.0.27",
     "intl": "^1.2.5",
     "intl-locales-supported": "^1.0.0",
     "match-sorter": "^2.3.0",
-    "material-ui-filter": "^2.1.12",
+    "material-ui-filter": "^2.1.13",
     "material-ui-image": "^3.0.3",
-    "material-ui-pickers": "^2.0.2",
-    "muishift": "^1.0.12",
+    "material-ui-pickers": "^2.1.1",
+    "muishift": "^1.0.13",
     "nwb": "^0.23.0",
     "prop-types": "^15.6.2",
-    "react": "^16.6.3",
+    "react": "^16.7.0",
     "react-chartjs-2": "^2.7.4",
     "react-countup": "^4.0.0",
     "react-custom-scrollbars": "^4.2.1",
-    "react-dom": "^16.6.3",
+    "react-dom": "^16.7.0",
     "react-helmet": "^5.2.0",
     "react-image-cropper": "^1.3.0",
     "react-intl": "^2.7.2",
-    "react-list": "^0.8.10",
+    "react-list": "^0.8.11",
     "react-loadable": "^5.5.0",
     "react-mic": "^12.3.0",
-    "react-player": "^1.7.0",
+    "react-player": "^1.8.0",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-toastify": "^4.4.3",
+    "react-toastify": "^4.5.2",
     "react-virtualized": "^9.21.0",
     "redux": "^4.0.1",
-    "redux-form": "^8.0.1",
+    "redux-form": "^8.1.0",
     "redux-form-material-ui": "^5.0.0-beta.2",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
