--- a/package.json
+++ b/package.json
@@ -18,30 +18,23 @@
     "test:coverage": "nwb test-react --coverage",
     "test:watch": "nwb test-react --server"
   },
-  "dependencies": {
-    "@material-ui/lab": "^3.0.0-alpha.25",
-    "classnames": "^2.2.6",
-    "expect": "^24.7.1",
-    "firekit-provider": "^1.0.1",
-    "history": "^4.9.0",
-    "moment": "^2.24.0"
-  },
+  "dependencies": {},
   "peerDependencies": {
-    "@date-io/moment": "0.x",
-    "@material-ui/core": "1.x",
-    "@material-ui/icons": "1.x",
-    "a2hs": "1.x",
-    "downshift": "2.x",
-    "firebase": "5.x",
-    "firebaseui": "3.x",
+    "@date-io/moment": "1.x",
+    "@material-ui/core": "3.x",
+    "@material-ui/icons": "3.x",
+    "a2hs": "2.x",
+    "downshift": "3.x",
+    "firebase": "6.x",
+    "firebaseui": "4.x",
     "fireform": "0.x",
     "firekit": "1.x",
-    "firekit-provider": "0.x",
+    "firekit-provider": "1.x",
     "intl": "1.x",
     "intl-locales-supported": "1.x",
-    "match-sorter": "2.x",
+    "match-sorter": "3.x",
     "material-ui-filter": "2.x",
-    "material-ui-image": "3.0.0-pre.7",
+    "material-ui-image": "3.x",
     "material-ui-pickers": "2.x",
     "muishift": "1.x",
     "prop-types": "15.x",
@@ -53,42 +46,48 @@
     "react-intl": "2.x",
     "react-list": "0.x",
     "react-loadable": "5.x",
-    "react-mic": "9.x",
+    "react-mic": "12.x",
     "react-player": "1.x",
-    "react-redux": "6.x",
-    "react-router": "4.x",
-    "react-router-dom": "4.x",
-    "react-toastify": "4.x",
+    "react-redux": "7.x",
+    "react-router": "5.x",
+    "react-router-dom": "5.x",
+    "react-toastify": "5.x",
     "react-virtualized": "9.x",
     "redux": "4.x",
     "redux-form": "8.x",
-    "redux-form-material-ui": "5.0.0-beta.2",
+    "redux-form-material-ui": "5.0.0-beta.3",
     "redux-logger": "3.x",
     "redux-persist": "5.x",
     "redux-thunk": "2.x"
   },
   "devDependencies": {
-    "@date-io/moment": "^1.1.0",
+    "@date-io/moment": "^1.3.5",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
+    "@material-ui/lab": "^3.0.0-alpha.25",
     "a2hs": "^1.0.2",
     "babel-eslint": "^10.0.1",
     "chart.js": "^2.8.0",
-    "downshift": "^3.2.7",
+    "classnames": "^2.2.6",
+    "downshift": "^3.2.10",
     "eslint": "^5.16.0",
-    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4",
-    "firebase": "^5.9.3",
-    "firebaseui": "^3.5.2",
+    "eslint-plugin-react": "^7.13.0",
+    "expect": "^24.8.0",
+    "firebase": "^6.0.2",
+    "firebaseui": "^4.0.0",
     "fireform": "^0.2.13",
     "firekit": "^1.0.30",
+    "firekit-provider": "^1.0.1",
+    "history": "^4.9.0",
     "intl": "^1.2.5",
     "intl-locales-supported": "^1.0.0",
-    "match-sorter": "^2.3.0",
+    "match-sorter": "^3.0.0",
     "material-ui-filter": "^2.1.14",
-    "material-ui-image": "^3.1.0",
+    "material-ui-image": "^3.2.0",
     "material-ui-pickers": "^2.2.4",
+    "moment": "^2.24.0",
     "muishift": "^1.0.13",
     "nwb": "^0.23.0",
     "prop-types": "^15.7.2",
@@ -97,20 +96,20 @@
     "react-countup": "^4.1.3",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.0",
+    "react-helmet": "^5.2.1",
     "react-image-cropper": "^1.3.0",
     "react-intl": "^2.8.0",
     "react-list": "^0.8.11",
     "react-loadable": "^5.5.0",
     "react-mic": "^12.4.1",
-    "react-player": "^1.10.0",
-    "react-redux": "^7.0.1",
+    "react-player": "^1.11.0",
+    "react-redux": "^7.0.3",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
-    "react-toastify": "^5.0.0",
-    "react-virtualized": "^9.21.0",
+    "react-toastify": "^5.1.0",
+    "react-virtualized": "^9.21.1",
     "redux": "^4.0.1",
-    "redux-form": "^8.1.0",
+    "redux-form": "^8.2.0",
     "redux-form-material-ui": "^5.0.0-beta.2",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
