--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "test:coverage": "nwb test-react --coverage",
     "test:watch": "nwb test-react --server"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@material-ui/lab": "^3.0.0-alpha.30"
+  },
   "peerDependencies": {
     "@date-io/moment": "1.x",
     "@material-ui/core": "3.x",
@@ -65,7 +67,6 @@
     "@date-io/moment": "^1.3.5",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
-    "@material-ui/lab": "^3.0.0-alpha.25",
     "a2hs": "^1.0.2",
     "babel-eslint": "^10.0.1",
     "chart.js": "^2.8.0",
