--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "16.x",
     "react-custom-scrollbars": "4.x",
     "react-dom": "16.x",
+    "react-dropzone": "10.x",
     "react-helmet": "5.x",
     "react-image-cropper": "1.x",
     "react-intl": "2.x",
@@ -98,6 +99,7 @@
     "react-countup": "^4.2.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.8.6",
+    "react-dropzone": "^10.1.6",
     "react-helmet": "^5.2.1",
     "react-image-cropper": "^1.3.0",
     "react-intl": "^2.9.0",
