--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "downshift": "3.x",
     "firebase": "6.x",
     "firebaseui": "4.x",
-    "fireform": "0.x",
+    "fireform": "1.x",
     "firekit": "1.x",
     "firekit-provider": "1.x",
     "history": "4.x",
@@ -68,31 +68,37 @@
     "@date-io/moment": "^1.3.8",
     "@material-ui/core": "^4.3.0",
     "@material-ui/icons": "^4.2.1",
-    "a2hs": "^1.1.1",
+    "a2hs": "^1.1.2",
     "babel-eslint": "^10.0.2",
     "chart.js": "^2.8.0",
     "classnames": "^2.2.6",
     "downshift": "^3.2.10",
     "eslint": "^6.1.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-config-standard": "^13.0.1",
+    "eslint-config-standard-react": "^8.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
     "expect": "^24.8.0",
     "firebase": "^6.3.3",
     "firebaseui": "^4.1.0",
-    "fireform": "^0.2.17",
+    "fireform": "^1.0.0",
     "firekit": "^1.0.30",
     "firekit-provider": "^1.0.2",
     "history": "^4.9.0",
     "intl": "^1.2.5",
     "intl-locales-supported": "^1.4.2",
     "match-sorter": "^4.0.1",
-    "material-ui-filter": "^3.0.1",
+    "material-ui-filter": "^3.0.2",
     "material-ui-image": "^3.2.0",
     "material-ui-pickers": "^2.2.4",
     "moment": "^2.24.0",
     "muishift": "^1.0.16",
     "nwb": "^0.23.0",
+    "prettier-eslint": "^9.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-chartjs-2": "^2.7.6",
