--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,15 +4,20 @@
     "es6": true,
     "node": true
   },
-  "extends": ["prettier"],
+  "extends": ["eslint:recommended", "plugin:react/recommended", "prettier"],
   "parser": "babel-eslint",
   "plugins": ["react"],
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
   "rules": {
     "indent": ["error", 2],
     "linebreak-style": ["error", "windows"],
     "quotes": ["error", "single"],
     "semi": ["error", "never"],
-    "react/prop-types": [1],
+    "react/prop-types": [0],
     "no-console": "warn",
     "prettier": 1
   }
