--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {},
   "peerDependencies": {
     "@date-io/moment": "1.x",
+    "@formatjs/intl-relativetimeformat": "2.x",
     "@material-ui/core": "4.x",
     "@material-ui/icons": "4.x",
     "a2hs": "1.x",
@@ -33,6 +34,7 @@
     "history": "4.x",
     "intl": "1.x",
     "intl-locales-supported": "1.x",
+    "intl-pluralrules": "1.x",
     "match-sorter": "4.x",
     "material-ui-filter": "3.x",
     "material-ui-image": "3.x",
@@ -45,7 +47,7 @@
     "react-dropzone": "10.x",
     "react-helmet": "5.x",
     "react-image-cropper": "1.x",
-    "react-intl": "2.x",
+    "react-intl": "3.x",
     "react-list": "0.x",
     "react-loadable": "5.x",
     "react-mic": "12.x",
@@ -62,8 +64,9 @@
     "redux-thunk": "2.x"
   },
   "devDependencies": {
-    "@date-io/moment": "^1.3.8",
-    "@material-ui/core": "^4.3.0",
+    "@date-io/moment": "^1.3.9",
+    "@formatjs/intl-relativetimeformat": "^2.5.0",
+    "@material-ui/core": "^4.3.1",
     "@material-ui/icons": "^4.2.1",
     "a2hs": "^1.1.3",
     "babel-eslint": "^10.0.2",
@@ -85,6 +88,7 @@
     "history": "^4.9.0",
     "intl": "^1.2.5",
     "intl-locales-supported": "^1.4.2",
+    "intl-pluralrules": "^1.0.3",
     "match-sorter": "^4.0.1",
     "material-ui-filter": "^3.0.2",
     "material-ui-image": "^3.2.0",
@@ -96,13 +100,13 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-chartjs-2": "^2.7.6",
-    "react-countup": "^4.2.0",
+    "react-countup": "^4.2.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.1.7",
     "react-helmet": "^5.2.1",
     "react-image-cropper": "^1.3.0",
-    "react-intl": "^2.9.0",
+    "react-intl": "^3.0.0",
     "react-list": "^0.8.11",
     "react-loadable": "^5.5.0",
     "react-mic": "^12.4.1",
