Fixed react-inlt peer dependencies

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "dependencies": {},
   "peerDependencies": {
     "@date-io/moment": "1.x",
-    "@formatjs/intl-relativetimeformat": "2.x",
+    "@formatjs/intl-relativetimeformat": "^2.5.0",
     "@material-ui/core": "4.x",
     "@material-ui/icons": "4.x",
     "a2hs": "1.x",
@@ -32,9 +32,9 @@
     "firekit": "1.x",
     "firekit-provider": "1.x",
     "history": "4.x",
-    "intl": "1.x",
+    "intl": "^3.0.0",
     "intl-locales-supported": "1.x",
-    "intl-pluralrules": "1.x",
+    "intl-pluralrules": "^1.0.3",
     "match-sorter": "4.x",
     "material-ui-filter": "3.x",
     "material-ui-image": "3.x",
