Migrated from material-ui-pickers to @material-ui/pickers

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@formatjs/intl-relativetimeformat": "^2.5.0",
     "@material-ui/core": "4.x",
     "@material-ui/icons": "4.x",
+    "@material-ui/pickers": "3.x",
     "a2hs": "1.x",
     "downshift": "3.x",
     "firebase": "6.x",
@@ -38,7 +39,6 @@
     "match-sorter": "4.x",
     "material-ui-filter": "3.x",
     "material-ui-image": "3.x",
-    "material-ui-pickers": "2.x",
     "muishift": "1.x",
     "prop-types": "15.x",
     "react": "16.x",
@@ -66,8 +66,9 @@
   "devDependencies": {
     "@date-io/moment": "^1.3.11",
     "@formatjs/intl-relativetimeformat": "^4.2.0",
-    "@material-ui/core": "^4.5.0",
-    "@material-ui/icons": "^4.4.3",
+    "@material-ui/core": "^4.5.1",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/pickers": "^3.2.7",
     "a2hs": "^1.1.3",
     "babel-eslint": "^10.0.3",
     "chart.js": "^2.8.0",
@@ -80,7 +81,7 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
     "expect": "^24.9.0",
-    "firebase": "^7.1.0",
+    "firebase": "^7.2.0",
     "firebaseui": "^4.2.0",
     "fireform": "^1.0.0",
     "firekit": "^1.0.30",
@@ -90,9 +91,8 @@
     "intl-locales-supported": "^1.6.0",
     "intl-pluralrules": "^1.0.3",
     "match-sorter": "^4.0.2",
-    "material-ui-filter": "^3.0.2",
+    "material-ui-filter": "^3.1.0",
     "material-ui-image": "^3.2.2",
-    "material-ui-pickers": "^2.2.4",
     "moment": "^2.24.0",
     "muishift": "^1.1.3",
     "nwb": "^0.23.0",
