--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,20 @@
 language: node_js
 node_js:
-  - 8
+  - 12
 
 cache:
   directories:
-  - node_modules
-
-before_install:
-  - npm install codecov.io coveralls
+    - node_modules
 
 script:
   - npm test
 
 after_success:
-  - cat ./coverage/lcov.info | ./node_modules/codecov.io/bin/codecov.io.js
-  - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
   - npm run build
 
 deploy:
   provider: npm
-  skip_cleanup: true
+  skip_cleanup: false
   email: $NPM_EMAIL
   api_key: $NPM_TOKEN
   on:
