Updated peer dependencies

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ after_success:
 
 deploy:
   provider: npm
-  skip_cleanup: false
+  skip_cleanup: true
   email: $NPM_EMAIL
   api_key: $NPM_TOKEN
   on:
